--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             of the body instead, the user would see the template syntax briefly appear on the screen before
             the data was loaded and merged with the template -->
         <script src="lib/angular-1.3.1/angular.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.11.2/ui-bootstrap-tpls.min.js"></script>
+
     </head>
     <body>
-        <main class="container-fluid" ng-app="toDoApp" ng-controller="TaskController">
+        <main class="container-fluid" ng-app="toDoApp" ng-controller="TasksController">
             <header class="page-header">
                 <img src="img/ring.png" alt="ring icon" class="pull-right"/>
                 <h1>Sauron's To-Do List</h1>
@@ -32,6 +34,11 @@
                         <label for="task-title">Title</label>
                         <input type="text" id="task-title" class="form-control"
                                placeholder="title of new task" ng-model="newTask.title"/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="task-priority">Priority</label>
+                        <rating max="3" ng-model="newTask.priority"></rating>
                     </div>
 
                     <div class="form-group">
@@ -57,6 +64,10 @@
                     <tbody>
                         <tr ng-repeat="task in tasks">
                             <td ng-class="{done: task.done}">{{task.title}}</td>
+                            <td>
+                                <rating ax="3" ng-model="task.priority"
+                                        ng-change="updateTask(task)" ng-class="{done: task.done}" readonly=""task.done></rating>
+                            </td>
                             <td><input type="checkbox" ng-model="task.done" ng-change="updateTask(task)"/></td>
                         </tr>
                     </tbody>
