changes at the end of class

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     <thead>
                         <tr>
                             <th>Task</th>
+                            <th>Priority</th>
+                            <th>Votes</th>
                             <th>Done</th>
                         </tr>
                     </thead>
@@ -65,8 +67,14 @@
                         <tr ng-repeat="task in tasks">
                             <td ng-class="{done: task.done}">{{task.title}}</td>
                             <td>
-                                <rating ax="3" ng-model="task.priority"
-                                        ng-change="updateTask(task)" ng-class="{done: task.done}" readonly=""task.done></rating>
+                                <rating max="3" ng-model="task.priority"
+                                        ng-change="updateTask(task)" ng-class="{done: task.done}" readonly="task.done"></rating>
+
+                            </td>
+                            <td>
+                                {{task.votes || 0}}
+                                <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementVotes(task, 1)"></span>
+                                <span class="glyphicon glyphicon-thumbs-down" ng-click="incrementVotes(task, -1)"></span>
                             </td>
                             <td><input type="checkbox" ng-model="task.done" ng-change="updateTask(task)"/></td>
                         </tr>
